--- a/pom.xml
+++ b/pom.xml
@@ -38,11 +38,6 @@
 			<groupId>net.java.dev.jna</groupId>
 			<artifactId>jna-platform</artifactId>
 			<version>4.4.0</version>
-		</dependency>
-		<dependency>
-		    <groupId>net.sourceforge.tess4j</groupId>
-		    <artifactId>tess4j</artifactId>
-		    <version>3.4.0</version>
 		</dependency>		
 		<dependency>
 		    <groupId>ch.qos.logback</groupId>
@@ -54,6 +49,21 @@
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.boofcv</groupId>
+			<artifactId>ip</artifactId>
+			<version>0.26</version>
+		</dependency>
+		<dependency>
+			<groupId>org.boofcv</groupId>
+			<artifactId>io</artifactId>
+			<version>0.26</version>
+		</dependency>
+		<dependency>
+			<groupId>org.boofcv</groupId>
+			<artifactId>feature</artifactId>
+			<version>0.26</version>
 		</dependency>
 	</dependencies>
 </project>
