--- a/pom.xml
+++ b/pom.xml
@@ -66,4 +66,7 @@
 			<version>0.26</version>
 		</dependency>
 	</dependencies>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 </project>
