--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
 			<artifactId>feature</artifactId>
 			<version>0.26</version>
 		</dependency>
+		<dependency>
+			<groupId>org.boofcv</groupId>
+			<artifactId>visualize</artifactId>
+			<version>0.26</version>
+		</dependency>		
 	</dependencies>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
